--- a/CLC/WebContent/WEB-INF/web.xml
+++ b/CLC/WebContent/WEB-INF/web.xml
@@ -22,5 +22,27 @@
 	<param-name>javax.faces.WEBAPP_RESOURCES_DIRECTORY</param-name>
 	<param-value>/resources</param-value>
 </context-param>
-
+<servlet-mapping>
+	 <servlet-name>Resteasy Servlet</servlet-name>
+	 <url-pattern>/rest/*</url-pattern>
+  </servlet-mapping>
+  <context-param>
+	  <param-name>resteasy.scan</param-name>
+	  <param-value>true</param-value>
+  </context-param>
+  <context-param>
+	  <param-name>resteasy.servlet.mapping.prefix</param-name>
+	  <param-value>/rest</param-value>
+  </context-param>
+  <listener>
+	  <listener-class>
+		org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
+	  </listener-class>
+  </listener>
+  <servlet>
+	  <servlet-name>Resteasy Servlet</servlet-name>
+	  <servlet-class>
+		org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher
+	  </servlet-class>
+  </servlet>
 </web-app>
